feat: gps access in checkin
