# src/routes/timeLog.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { TimeLogController } from '../controllers/TimeLogController.js';
 import { isAuthenticated } from '../middlewares/auth.js';
+import { checkinUpload } from '../config/multer.js';
 
 const router = Router();
 
@@ -13,9 +14,9 @@ router.get('/test', (req, res) => {
     });
 });
 
-router.post('/checkin', isAuthenticated, TimeLogController.checkIn);
+router.post('/checkin', isAuthenticated, checkinUpload.single('photo'), TimeLogController.checkIn);
 
-router.post('/checkout', isAuthenticated, TimeLogController.checkOut);
+router.post('/checkout', isAuthenticated, checkinUpload.single('photo'), TimeLogController.checkOut);
 
 router.get('/', isAuthenticated, TimeLogController.getTimeLogs);
 
